force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/Codify_Root_Cause_Taxonomy__mdt.object-meta.xml
<CustomObject>
    <description
  >The standard root cause categories the classifier tags against. Configurable per business vertical without touching Apex: add or retire a row here and Codify classifies against the new taxonomy on the next recap.</description>
    <label>Codify Root Cause Taxonomy</label>
    <pluralLabel>Codify Root Cause Taxonomy</pluralLabel>
</CustomObject>