force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Article_Worthy__c.field-meta.xml
<CustomField>
    <fullName>Article_Worthy__c</fullName>
    <label>Article Worthy</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >Whether fixes of this kind are usually worth a Knowledge article. One-off hardware swaps normally are not; recurring configuration mistakes are.</description>
</CustomField>