force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <label>Category Group</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Coarse grouping (Hardware, Software, Configuration, Process, Environmental, User Error). Two root causes in the same group are treated as closely related by the sweep.</description>
</CustomField>