force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Detection_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Detection_Keywords__c</fullName>
    <label>Detection Keywords</label>
    <type>LongTextArea</type>
    <length>2048</length>
    <description
  >Comma-separated, case-insensitive keywords. The classifier scores a recap against these; the highest-scoring active row wins, and no row clearing the confidence floor means no tag.</description>
</CustomField>