force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >Retire a root cause by unchecking this rather than deleting it, so historical Case tags stay meaningful.</description>
</CustomField>