force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Related_Keys__c.field-meta.xml
<CustomField>
    <fullName>Related_Keys__c</fullName>
    <label>Related Keys</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Comma-separated keys of closely related root causes, so the sweep can reach Cases tagged with a neighbouring cause rather than only exact matches.</description>
</CustomField>