force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Root_Cause_Key__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Key__c</fullName>
    <label>Root Cause Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >Stable machine key for this root cause. The Related Case Sweep matches on this, so it must not change once Cases are tagged with it.</description>
</CustomField>