force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Root_Cause_Label__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Label__c</fullName>
    <label>Root Cause Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description
  >What a human sees on the Case and in the trends tab. Safe to reword without breaking the sweep.</description>
</CustomField>