force-app/main/default/objects/Codify_Root_Cause_Taxonomy__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description
  >Display and tie-break order when two root causes score identically.</description>
</CustomField>